force-app/main/default/objects/Credit_History__c/Credit_History__c.object-meta.xml
<CustomObject>
    <label>Credit History</label>
    <pluralLabel>Credit History</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Credit History Number</label>
        <displayFormat>CH-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Audit trail of credit-relevant changes (limit, payment terms) per Account, with timestamp and reason. OWD Private. See ADR-0003.</description>
</CustomObject>