force-app/main/default/objects/Credit_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit History</relationshipLabel>
    <relationshipName>Credit_History</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer Account this credit change applies to. Lookup (not Master-Detail) with SetNull so history survives if the Account is deleted (the audit row remains with Account__c blank). Field is not required at the metadata level precisely to allow SetNull; population is enforced by automation, not by the schema. See ADR-0003.</description>
</CustomField>