force-app/main/default/objects/Credit_History__c/fields/Change_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Change_Timestamp__c</fullName>
    <label>Change Timestamp</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When the credit change occurred. See ADR-0003.</description>
</CustomField>