force-app/main/default/objects/Credit_History__c/fields/New_Limit__c.field-meta.xml
<CustomField>
    <fullName>New_Limit__c</fullName>
    <label>New Limit</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Credit limit after this change. See ADR-0003.</description>
</CustomField>