force-app/main/default/objects/Credit_History__c/fields/Previous_Limit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Limit__c</fullName>
    <label>Previous Limit</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Credit limit before this change. See ADR-0003.</description>
</CustomField>