force-app/main/default/objects/Credit_History__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
    <description>Business reason / context for the credit change (the "why"). This is the key differentiator over native Field History Tracking. See ADR-0003.</description>
</CustomField>